# lsnote

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  homebrew.yml  release.yml
src/: config.rs  display.rs  git.rs  icons.rs  main.rs  notes.rs
